--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: islamic_store
-description: "A new Flutter project."
+description: "An Islamic Abaya Store App with elegant onboarding screens."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -31,10 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.13.1
+  get: ^4.6.5  # For state management
+  smooth_page_indicator: ^1.1.0
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
   firebase_storage: ^12.4.6
   google_fonts: ^6.2.1
+  flutter_native_splash: ^2.0.5
+  cached_network_image: ^3.2.3
+  url_launcher: ^6.1.14
+  intl: ^0.18.1
+  font_awesome_flutter: ^10.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,10 +70,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  
+  assets:
+    - assets/images/
+     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -93,3 +100,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_native_splash:
+  color: "#FAF3E0"  # Choose your main color (green or teal from your palette)
+  image: "assets/images/logo.png"  # Set path to your logo image file (optional)
+  android: true
+  ios: true
+
